# nbs-social-auth

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
nbs_social_auth/: base.py  google.py
